manifests/aws-load-balancer-controller/app1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment 
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: app1
  template:
    metadata:
      name: app1-pods
      labels:
        app: app1
    spec:
      containers:
        - name: nginx
          image: nginx:1.19
          ports:
            - containerPort: 80
