manifests/aws-load-balancer-controller/app2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      name: app2-pods 
      labels:
        app: app2
    spec:
      containers:
        - name: apache
          image: nginx:1.21
          ports:
            - containerPort: 80
