manifests/aws-load-balancer-controller/app2-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app2-svc
spec:
  selector: 
    app: app2
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
